# arbitraje_bot

./: .env.example  .gitignore  AGENTS.md  IMPROVEMENTS.md  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8047c005fa43_init_tables.py  828ed5607b4b_add_spot_futures_history_table.py
backend/app/: config.py  deps.py  main.py
backend/app/api/: websocket.py
backend/app/api/routes/: alerts_route.py  cycles.py  history.py  live_route.py  paper_route.py  prices.py  settings_route.py  spot_futures_route.py
backend/app/core/: calculator.py  graph.py  risk.py
backend/app/db/: models.py  session.py
backend/app/exchanges/: base.py  binance.py  binance_futures.py  binance_ws.py
backend/app/models/: primitives.py
backend/app/services/: alerts.py  analytics.py  cycle_logger.py  cycle_scanner.py  live_executor.py  paper_executor.py  paper_trader.py  price_aggregator.py  redis_cache.py  spot_futures.py  spot_futures_executor.py  telegram.py  volatility.py
backend/app/utils/: logger.py  rate_limiter.py
backend/tests/: test_aggregator_volatility.py  test_alerts_route.py  test_alerts_service.py  test_calculator.py  test_graph.py  test_live_executor.py  test_paper_executor.py  test_redis_cache.py  test_risk.py
frontend/: pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/charts/: CycleCountChart.tsx  (+1 more)
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
(+18 files in other folders)
